--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       }
     </style>
     <div style="display: inline-block; position: relative">
-     
-      <div id="barDragon"
+      <div
+        id="barDragon"
         style="
           background-color: white;
           width: 250px;
@@ -47,13 +47,14 @@
           padding: 12px;
         "
       >
-      <div style="position: absolute;"></div>
+        <div style="position: absolute"></div>
         <h1 style="font-size: 16px">Дракончик</h1>
         <div style="position: relative">
           <div
             style="height: 5px; background-color: #ddd; margin-top: 10px"
           ></div>
-          <div id="enemyHealthBar"
+          <div
+            id="enemyHealthBar"
             style="
               height: 5px;
               background-color: green;
@@ -67,7 +68,8 @@
         </div>
       </div>
 
-      <div id="barEmby"
+      <div
+        id="barEmby"
         style="
           background-color: white;
           width: 250px;
@@ -84,7 +86,7 @@
             style="height: 5px; background-color: #ddd; margin-top: 10px"
           ></div>
           <div
-          id="myHealthBar"
+            id="myHealthBar"
             style="
               height: 5px;
               background-color: green;
@@ -99,52 +101,58 @@
       </div>
       <canvas></canvas>
       <div id="userIntarfase">
-      <div
-        id="characterDialogueBox"
-        style="
-          background-color: white;
-          height: 140px;
-          position: absolute;
-          bottom: 0;
-          left: 0;
-          right: 0;
-          border-top: 4px solid black;
-          display: flex;
-        "
-      >
-      <div
-      id="dialogueBox" style="position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-color: white;
-      padding: 12px;
-      display: none;
-      cursor: pointer;">sdfsdf</div>
         <div
+          id="characterDialogueBox"
           style="
-            width: 66.66%;
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-          "
-        >
-          <button>Удар</button>
-          <button>Дробящий</button>
-        </div>
-        <div
-          style="
+            background-color: white;
+            height: 140px;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            border-top: 4px solid black;
             display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 33.33%;
-            border-left: 4px solid black;
           "
         >
-          <h1 style="font-size: 16px">Тип Атаки</h1>
+          <div
+            id="dialogueBox"
+            style="
+              position: absolute;
+              top: 0;
+              right: 0;
+              bottom: 0;
+              left: 0;
+              background-color: white;
+              padding: 12px;
+              display: none;
+              cursor: pointer;
+            "
+          >
+            sdfsdf
+          </div>
+          <div
+            style="
+              width: 66.66%;
+              display: grid;
+              grid-template-columns: repeat(2, 1fr);
+            "
+          >
+            <button>Удар</button>
+            <button>Дробящий</button>
+          </div>
+          <div
+            style="
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              width: 33.33%;
+              border-left: 4px solid black;
+            "
+          >
+            <h1 style="font-size: 16px">Тип Атаки</h1>
+          </div>
         </div>
       </div>
-    </div>
     </div>
     <script src="/data/audio.js"></script>
     <script src="/data/battleZone.js"></script>
