--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <style>
       * {
         font-family: "Press Start 2P", system-ui;
+        margin: 0;
+        padding: 0;
       }
       body {
         background-color: black;
